--- a/tetris_game/index.html
+++ b/tetris_game/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en">
+    <head>
+        <link rel="icon" href="tetris.png">
+        <title>Tetris</title>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
