--- a/pacman_game/index.html
+++ b/pacman_game/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <link rel="icon" href="pacman.png">
+    <link rel="icon" href="../pacman.png">
     <title>Pacman</title>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
