--- a/snake_game/index.html
+++ b/snake_game/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <link rel="icon" href="snake.jpg">
+    <link rel="icon" href="../snake.jpg">
     <title>Snake</title>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
