--- a/tetris_game/index.html
+++ b/tetris_game/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en">
     <head>
-        <link rel="icon" href="tetris.png">
+        <link rel="icon" href="../tetris.png">
         <title>Tetris</title>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
