--- a/tetris_game/index.html
+++ b/tetris_game/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
+    <link rel="icon" href="../tetris.png">
+    <title>Tetris</title>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -8,8 +10,6 @@
   <body>
     <script src="sketch.js"></script>
     <script src="map.js"></script>
-    <script src="piece.js"></script>
-    <!--<script src="tesztelesre.js"></script>-->
-  
+    <script src="piece.js"></script>  
 
 </body></html>
